# Saturnus

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-ISC  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/cortex-a/: Cargo.toml
crates/cortex-a/src/: asm.rs  lib.rs  paging.rs  registers.rs  utils.rs
crates/cortex-a/src/asm/: barrier.rs
crates/cortex-a/src/paging/: addr.rs  error.rs  granule.rs  page.rs  page_table.rs  table_entry.rs
crates/cortex-a/src/registers/: current_el.rs  daif.rs  dit.rs  elr_el.rs  esr_el.rs  far_el.rs  fpcr.rs  fpsr.rs  macros.rs  mair_el.rs  midr_el1.rs  nzvc.rs  sctlr_el.rs  sp_el.rs  spsel.rs  spsr_el.rs  tcr_el.rs  tpidr_el.rs  ttbr_el.rs  vbar_el.rs
crates/libkern/: Cargo.toml
crates/libkern/src/: addr.rs  bsp.rs  critical_section.rs  init.rs  irq.rs  lib.rs  scoped_lock.rs  smc.rs  spin.rs  spin_lock.rs  sync.rs  system_control.rs
crates/libkern/src/_arch/aarch64/: spin_lock.rs
crates/libkern/src/_arch/aarch64/init/paging/: mod.rs
crates/libkern/src/arch/: mod.rs
crates/libkern/src/arch/aarch64/: addr.rs  mod.rs
crates/libkern/src/arch/aarch64/init/: mod.rs
crates/libkern/src/arch/aarch64/init/paging/: allocator.rs  mod.rs
crates/libkern/src/bsp/: generic.rs
crates/libkern/src/bsp/aarch64/: nintendo_nx.rs
crates/libkern/src/bsp/aarch64/nintendo_nx/: smc.rs
crates/libkern/src/bsp/aarch64/nintendo_nx/smc/: rng.rs
crates/libkern/src/bsp/generic/: rand.rs
crates/libkern/src/init/: mod.rs  paging.rs
crates/libkern/src/init/paging/: allocator.rs  mod.rs  table.rs
crates/libkern/src/init/paging/allocator/: cursor.rs  hole.rs  mod.rs
crates/libutils/: Cargo.toml
crates/libutils/src/: assert.rs  bits.rs  crc.rs  lib.rs  mem.rs  units.rs
crates/semihosting/: Cargo.toml
crates/semihosting/src/: debug.rs  export.rs  host.rs  lib.rs  macros.rs  ops.rs
crates/smc/: Cargo.toml
crates/smc/codegen/: Cargo.toml
crates/smc/codegen/src/: lib.rs
crates/smc/src/: call.rs  ctx.rs  lib.rs  result.rs  service.rs
crates/tegra210/: Cargo.toml
crates/tegra210/src/: lib.rs
crates/tegra210/src/car/: mod.rs  raw.rs
crates/tegra210/src/mc/: mod.rs  raw.rs
crates/tegra210/src/uart/: mod.rs  raw.rs
crates/utils/: Cargo.toml
crates/utils/src/: align.rs
kernel/: Cargo.toml  build.rs
kernel/loader/: Cargo.toml  build.rs
kernel/loader/src/: exception.rs  lib.rs  loader.rs  macros.rs  main.rs  page_allocator.rs  paging.rs  panic.rs  reloc.rs  rt.rs  static_cell.rs
kernel/loader/src/_arch/aarch64/: exception.rs  exception.s  main.rs  paging.rs  rt.rs  start.s
kernel/loader/src/bsp/: mod.rs
kernel/loader/src/bsp/aarch64/nintendo/nx/: resources.rs
kernel/loader/src/bsp/aarch64/qemu/: resources.rs
kernel/src/: main.rs
linker-scripts/: loader.ld
saturnus/config/src/: lib.rs
saturnus/kernel/: Cargo.toml
saturnus/kernel-loader/: Cargo.toml
saturnus/kernel-loader/src/: main.rs  panic.rs  reloc.rs
saturnus/kernel-loader/src/arch/: mod.rs
saturnus/kernel-loader/src/arch/aarch64/: mod.rs  start.s
saturnus/kernel-loader/src/arch/aarch64/r0/: exception.rs  exception.s  mod.rs  start.s
saturnus/kernel-loader/src/board/: mod.rs
saturnus/kernel-loader/src/board/qemu/: mod.rs  system_control.rs
saturnus/kernel/src/: main.rs
saturnus/kernel/src/arch/: mod.rs
saturnus/kernel/src/arch/aarch64/: mod.rs  start.s
saturnus/kernel/src/arch/aarch64/r0/: cache.rs  el.rs  mod.rs  start.s
saturnus/utils/src/: lib.rs
scripts/: qemu.sh
targets/: aarch64-saturnus-none.json
xtask/: Cargo.toml
xtask/src/: build.rs  check.rs  lib.rs  lint.rs  llvm.rs  main.rs  package.rs  run.rs  runner.rs  rustc.rs
