[workspace]
members = [
    "build/kernel-image",
    "build/xtask",

    "saturnus/*",
]

[profile.release]
debug = true
codegen-units = 1
opt-level = "s"
lto = "fat"

# We override the `opt-level` in debug builds because somehow
# we segfault rustc or LLVM when building with opt-level 0.
[profile.dev]
opt-level = 1
