[package]
name = "saturnus-libkern"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "A library for unifying shared kernel code."
license = "GPL-2.0"
repository = "https://github.com/vbe0201/Saturnus"
keywords = ["kernel", "library"]
categories = ["no-std", "embedded"]
edition = "2021"

[dependencies]
cortex-a = { package = "saturnus-cortex-a", path = "../cortex-a" }
libutils = { package = "saturnus-libutils", path = "../libutils" }

static_assertions = "1.0"
tock-registers = { version = "0.7.x", default-features = false }
