[package]
name = "saturnus-libkern"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "A library for unifying shared kernel code."
license = "GPL-2.0"
repository = "https://github.com/vbe0201/Saturnus"
keywords = ["kernel", "library"]
categories = ["no-std", "embedded"]
edition = "2021"

[dependencies]
cortex-a = { package = "saturnus-cortex-a", path = "../cortex-a" }
libutils = { package = "saturnus-libutils", path = "../libutils" }
lock_api = { version = "0.4.5", features = ["nightly"] }

static_assertions = "1.0"
tock-registers = { version = "0.7.x", default-features = false }


[target.'cfg(not(target_arch = "aarch64"))'.dependencies.spin]
version = "0.9.2"
default-features = false
features = ["mutex", "use_ticket_mutex", "lock_api"]

[features]
# Builds the kernel library for the Nintendo Switch (codename NX)
bsp-nintendo-nx = []
