[package]
name = "saturnus-semihosting"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Semihosting for the Saturnus kernel test environment"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vbe0201/Saturnus"
keywords = ["saturnus", "semihosting", "arm", "cortex-a"]
categories = ["no-std", "embedded"]
edition = "2021"

[dependencies]
libkern = { package = "saturnus-libkern", path = "../libkern" }
