[package]
name = "saturnus-semihosting"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Semihosting support for kernel development"
license = "ISC"
repository = "https://github.com/vbe0201/Saturnus.git"
keywords = ["saturnus", "semihosting", "arm", "cortex-a"]
categories = ["no-std", "embedded"]
edition = "2021"

[dependencies]
