[package]
name = "saturnus-smc"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of the Secure Monitor Call interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vbe0201/Saturnus"
keywords = ["saturnus", "smc", "arm"]
categories = ["no-std", "embedded"]
edition = "2021"

[dependencies]
