cargo-features = ["edition2021"]

[package]
name = "tegra210"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Justus K <justus.k@protonmail.com>"]
description = "Low-level hardware access library for the Tegra X1 T210 SOC."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vbe0201/Saturnus"
keywords = ["arm", "cortex-a"]
categories = ["no-std", "embedded"]
edition = "2021"

[dependencies]
