cargo-features = ["edition2021"]

[package]
name = "kernel-loader"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Justus K <justus.k@protonmail.com>"]
description = "Kernel Loader for setting up KASLR and mapping all segments in memory"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vbe0201/Saturnus"
edition = "2021"

[dependencies]
saturnus-semihosting = { path = "../../crates/semihosting" }

static_assertions = "1.1"
goblin = { version = "0.4", default-features = false, features = ["elf64"] }
