cargo-features = ["edition2021"]

[package]
name = "kernel-loader"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Justus K <justus.k@protonmail.com>"]
description = "Kernel Loader for setting up KASLR and mapping all segments in memory"
license = "GPL-2.0"
repository = "https://github.com/vbe0201/Saturnus"
edition = "2021"

[dependencies]
saturnus-semihosting = { path = "../../crates/semihosting" }
cortex-a = "6.0"
tock-registers = "0.7"

static_assertions = "1.1"
goblin = { version = "0.4", default-features = false, features = ["elf64"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
bitflags = "1"

[features]
default = ["bsp-qemu"]

# Builds the loader using platform-specific code for running
# on real Nintendo Switch (codename NX) hardware.
bsp-nintendo-nx = []
# Builds the loader using platform-specific code for running
# under a QEMU semihosting session for debugging.
bsp-qemu = []
