[package]
name = "kernel-loader"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Justus K <justus.k@protonmail.com>"]
description = "Kernel Loader for setting up KASLR and mapping all segments in memory"
license = "GPL-2.0"
repository = "https://github.com/vbe0201/Saturnus"
edition = "2021"

[dependencies]
cortex-a = { package = "saturnus-cortex-a", path = "../../crates/cortex-a" }
libkern = { package = "saturnus-libkern", path = "../../crates/libkern" }
semihosting = { package = "saturnus-semihosting", path = "../../crates/semihosting" }
tegra210 = { path = "../../crates/tegra210" }

goblin = { version = "0.4", default-features = false, features = ["elf64"] }
tock-registers = "0.7"
static_assertions = "1.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
bitflags = "1"

[features]
default = ["bsp-nintendo-nx"]

# Builds the loader using platform-specific code for running
# on real Nintendo Switch (codename NX) hardware.
bsp-nintendo-nx = ["libkern/bsp-nintendo-nx"]
# Builds the loader using platform-specific code for running
# under a QEMU semihosting session for debugging.
bsp-qemu = []
