[package]
name = "saturnus-kernel-loader"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Justus K <justus.k@protonmail.com>"]
description = "Bootstrap loader for the Saturnus kernel"
license = "GPL-2.0"
repository = "https://github.com/vbe0201/Saturnus.git"
edition = "2021"

[dependencies]
cfg-if = "1.0"

[features]
default = []

qemu = []
