[package]
name = "saturnus-kernel"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>", "Justus K <justus.k@protonmail.com>"]
description = "The Saturnus microkernel"
license = "GPL-2.0"
repository = "https://github.com/vbe0201/Saturnus.git"
edition = "2021"

[dependencies]
cfg-if = "1.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.4"
semihosting = { package = "saturnus-semihosting", path = "../../crates/semihosting" }
tock-registers = { version = "0.7.x", default-features = false }

[features]
default = []

qemu = []
